Revert "docs: add docs for getAllOpening"
This reverts commit e11eb63d445cc9b26bb5d7e874b62261f0d446eb.
