# handler/response.go
@@ -30,26 +30,11 @@ type ErrorResponse struct {
 }
 
 type CreateOpeningResponse struct {
-	Message string                  `json:"message"`
-	Data    schemas.OpeningResponse `json:"data"`
+	Message string `json:"message"`
+	Data    schemas.OpeningResponse
 }
 
 type DeleteOpeningResponse struct {
-	Message string                  `json:"message"`
-	Data    schemas.OpeningResponse `json:"data"`
-}
-
-type GetOpeningResponse struct {
-	Message string                  `json:"message"`
-	Data    schemas.OpeningResponse `json:"data"`
-}
-
-type GetAllOpeningResponse struct {
-	Message string                    `json:"message"`
-	Data    []schemas.OpeningResponse `json:"data"`
-}
-
-type UpdateOpeningResponse struct {
-	Message string                  `json:"message"`
-	Data    schemas.OpeningResponse `json:"data"`
+	Message string `json:"message"`
+	Data    schemas.OpeningResponse
 }
