# handler/updateOpening.go
@@ -7,19 +7,6 @@ import (
 	"github.com/marcsvinicius/go-api-jobs/schemas"
 )
 
-// @BasePath /api/v1
-
-// @Summary Update Opening
-// @Description Update a job opening
-// @Tags Openings
-// @Accept json
-// @Produce json
-// @Param id query string true "Opening identification"
-// @Param request body UpdateOpeningRequest true "Request body"
-// @Success 200 {object} UpdateOpeningResponse
-// @Failure 400 {object} ErrorResponse
-// @Failure 500 {object} ErrorResponse
-// @Router /opening [put]
 func UpdateOpeningHandler(ctx *gin.Context) {
 	request := UpdateOpeningRequest{}
 
